add drop down to select source

--- a/firstTry.html
+++ b/firstTry.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<select id="category" class="icon-menu" onchange="selectSource(this)">
+    <option value="web">Web</option>
+    <option value="tablet">Tablet</option>
+    <option value="total">Total</option>
+</select>
+
 
 <!-- Add a svg area, empty -->
 <div id="scatter_area"></div>
